--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,4 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
+# MySQL
 development:
   adapter: mysql
   database: bind_dns_development
