--- a/spec/fixtures/record_templates.yml
+++ b/spec/fixtures/record_templates.yml
@@ -1,57 +1,56 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-example_com_soa:
-  zone: example_com
+east_coast_soa:
+  zone_template: east_coast_dc
   ttl: 86400
-  type: SOA
+  record_type: SOA
   host: @
-  primary_ns: ns1.example.com.
-  contact: admin.example.com.
-  serial: 2008040101
+  primary_ns: ns1.%ZONE%.
+  contact: east-coast.example.com
   refresh: 10800
   retry: 7200
   expire: 604800
   minimum: 10800
-example_com_ns_ns1:
-  zone: example_com
+east_coast_ns_ns1:
+  zone_template: east_coast_dc
   ttl: 86400
-  type: NS
+  record_type: NS
   host: @
-  data: ns1.example.com.
+  data: ns1.%ZONE%.
 example_com_ns_ns2:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: NS
+  record_type: NS
   host: @
-  data: ns2.example.com.
+  data: ns2.%ZONE%.
 example_com_a_ns1:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: A
+  record_type: A
   host: ns1
   data: 10.0.0.1
 example_com_a_ns2:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: A
+  record_type: A
   host: ns2
   data: 10.0.0.2
 example_com_a:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: A
+  record_type: A
   host: @
   data: 10.0.0.3
 example_com_mx:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: MX
+  record_type: MX
   host: @
   priority: 10
   data: mail
 example_com_a_mail:
-  zone: example_com
+  zone_template: east_coast_dc
   ttl: 86400
-  type: A
+  record_type: A
   host: mail
   data: 10.0.0.4
