--- a/spec/fixtures/record_templates.yml
+++ b/spec/fixtures/record_templates.yml
@@ -17,40 +17,53 @@ east_coast_ns_ns1:
   record_type: NS
   host: @
   data: ns1.%ZONE%.
-example_com_ns_ns2:
+east_coast_ns_ns2:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: NS
   host: @
   data: ns2.%ZONE%.
-example_com_a_ns1:
+east_coast_a_ns1:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: A
   host: ns1
   data: 10.0.0.1
-example_com_a_ns2:
+east_coast_a_ns2:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: A
   host: ns2
   data: 10.0.0.2
-example_com_a:
+east_coast_a:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: A
   host: @
   data: 10.0.0.3
-example_com_mx:
+east_coast_mx:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: MX
   host: @
   priority: 10
   data: mail
-example_com_a_mail:
+east_coast_a_mail:
   zone_template: east_coast_dc
   ttl: 86400
   record_type: A
   host: mail
   data: 10.0.0.4
+
+# This template only has an SOA record
+west_coast_soa:
+  zone_template: west_coast_dc
+  ttl: 86400
+  record_type: SOA
+  host: @
+  primary_ns: ns1.%ZONE%.
+  contact: ewest-coast.example.com
+  refresh: 10800
+  retry: 7200
+  expire: 604800
+  minimum: 10800
