--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -3,7 +3,6 @@ admin:
   email: admin@example.com
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
-  # activation_code: adminscode # only if you're activating new signups
   created_at: <%= 1.days.ago.to_s :db %>
   roles: admin_role
 quentin:
@@ -12,8 +11,6 @@ quentin:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 5.days.ago.to_s :db %>
-  activation_code: 8f24789ae988411ccf33ab0c30fe9106fab32e9b
-  activated_at: <%= 5.days.ago.to_s :db %>
   state: active
   roles: owner_role
 aaron:
@@ -22,5 +19,11 @@ aaron:
   salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
   crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
   created_at: <%= 1.days.ago.to_s :db %>
-  activation_code: 8f24789ae988411ccf33ab0c30fe9106fab32e9a
-  state: pending
+  state: active
+api_client:
+  login: api_client
+  email: api@example.com
+  salt: 7e3041ebc2fc05a40c60028e2c4901a81035d3cd
+  crypted_password: 00742970dc9e6319f8019fd54864d3ea740f04b1 # test
+  state: active
+  roles: admin_role
