--- a/spec/fixtures/records.yml
+++ b/spec/fixtures/records.yml
@@ -12,36 +12,42 @@ example_com_soa:
   retry: 7200
   expire: 604800
   minimum: 10800
+  zone_name: example.com
 example_com_ns_ns1:
   zone: example_com
   ttl: 86400
   type: NS
   host: @
   data: ns1.example.com.
+  zone_name: example.com
 example_com_ns_ns2:
   zone: example_com
   ttl: 86400
   type: NS
   host: @
   data: ns2.example.com.
+  zone_name: example.com
 example_com_a_ns1:
   zone: example_com
   ttl: 86400
   type: A
   host: ns1
   data: 10.0.0.1
+  zone_name: example.com
 example_com_a_ns2:
   zone: example_com
   ttl: 86400
   type: A
   host: ns2
   data: 10.0.0.2
+  zone_name: example.com
 example_com_a:
   zone: example_com
   ttl: 86400
   type: A
   host: @
   data: 10.0.0.3
+  zone_name: example.com
 example_com_mx:
   zone: example_com
   ttl: 86400
@@ -49,9 +55,11 @@ example_com_mx:
   host: @
   priority: 10
   data: mail
+  zone_name: example.com
 example_com_a_mail:
   zone: example_com
   ttl: 86400
   type: A
   host: mail
   data: 10.0.0.4
+  zone_name: example.com
