--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # MySQL
 development:
   adapter: mysql
-  database: bind_dns_development
+  database: powerdns_development
   host: localhost
   username: root
   password:
@@ -11,14 +11,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql
-  database: bind_dns_test
+  database: powerdns_test
   host: localhost
   username: root
   password:
 
 production:
   adapter: mysql
-  database: bind_dns_production
+  database: powerdns_production
   host: localhost
   username: root
   password: dont-use-root-here
