--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
-test:
+test: &TEST
   adapter: mysql
   database: powerdns_test
   host: localhost
@@ -25,3 +25,6 @@ production:
   host: localhost
   username: root
   password: dont-use-root-here
+
+cucumber:
+  <<: *TEST
