--- a/config/database.yml
+++ b/config/database.yml
@@ -3,24 +3,27 @@
 
 # MySQL development
 development:
-  adapter: mysql2
+  adapter: postgresql
+  encoding: unicode
   database: powerdns_development
   host: localhost
-  username: root
-  password:
+  username: postgres
+  password: postgres
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test: &TEST
-  adapter: mysql2
+  adapter: postgresql
+  encoding: unicode
   database: powerdns_test
   host: localhost
-  username: root
-  password:
+  username: postgres
+  password: postgres
 
 production:
-  adapter: mysql2
+  adapter: postgresql
+  encoding: unicode
   database: powerdns_production
   host: localhost
   username: root
