--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,39 @@
 # You'll need to configure this file for the appropriate environment before
 # you run PowerDNS on Rails.
 
-# MySQL development
-development:
+sqlite: &sqlite
+  adapter: sqlite3
+  database: db/<%= Rails.env %>.sqlite3
+
+mysql: &mysql
   adapter: mysql2
-  database: powerdns_development
-  host: localhost
   username: root
   password:
+  database: powerdns_<%= Rails.env %>
+  encoding: utf8
+
+postgresql: &postgresql
+  adapter: postgresql
+  username: postgres
+  password:
+  database: powerdns_<%= Rails.env %>
+  min_messages: ERROR
+
+defaults: &defaults
+  pool: 16
+  timeout: 5000
+  host: localhost
+  <<: *<%= ENV['DB'] || "mysql" %>
+
+# Development, defaults to MySQL
+development:
+  <<: *defaults
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
-test: &TEST
-  adapter: mysql2
-  database: powerdns_test
-  host: localhost
-  username: root
-  password:
+test:
+  <<: *defaults
 
 production:
   adapter: mysql2
@@ -26,5 +42,3 @@ production:
   username: root
   password: dont-use-root-here
 
-cucumber:
-  <<: *TEST
