--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
 language: ruby
+bundler_args: --without development
 rvm:
-  - "1.8.7"
-  - "1.9.2"
-  - "1.9.3"
+  - 1.8.7
+  - 1.9.2
+  - 1.9.3
+  - 2.0.0
+  - rbx-19mode
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgres
+before_script:
+  - mysql -e 'create database powerdns_test;'
+  - psql -c 'create database powerdns_test;' -U postgres
+script: "bundle exec rake db:migrate spec"
+matrix:
+  allow_failures:
+    - rvm: jruby-19mode
+    - rvm: rbx-19mode
+    - rvm: 2.0.0
