try to get tests pass again

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 ---
 defaults: &defaults
-  adapter: mysql2
+  adapter: <%= ENV['DB_ADAPTER'] %>
   database: <%= ENV['DB_NAME'] %>
   username: <%= ENV['DB_USER'] %>
   password: <%= ENV['DB_PASSWORD'] %>
